# holyclaude-cloud

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  STATUS.md  TROUBLESHOOTING.md  gotchas.md  pyproject.toml  requirements.txt  setup
.claude-plugin/: plugin.json
.github/workflows/: tests.yml
.supercoder/: supercoder.db-shm  supercoder.db-wal
commands/: legion-cost.md  legion-reconcile.md  legion-scale.md  legion-start.md  legion-status.md  legion-stop.md
config/: legion.toml.example
lib/: __init__.py  brain.py  cli.py  config.py  critic.py  dispatch.py  governor.py  mediator.py  reconciler.py  reviewer.py  routing.py  state.py
modal/: image.py  worker.py
skills/dispatcher/: SKILL.md
skills/orchestrator/: SKILL.md
skills/reconciler/: SKILL.md
tests/: test_brain.py  test_brain_wiring.py  test_ci_redispatch.py  test_cli_summary.py  test_critic_checks.py  test_critic_overlaps.py  test_reconciler.py  test_state.py
